Also fixed to code id and alignment for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,15 @@
 #code{
     color: #ff5c0f;
 }
+#toCode{
+    color: #ff5c0f;
+}
 
 h1 {
     margin: 0px;
+}
+h3{
+    font-size: 14px;
 }
 
 ul {
@@ -17,6 +23,11 @@ li {
     padding: 3px;
 }
 
+header{
+    padding:20px;
+    background-color: #fff;
+    padding-top: 75px; 
+}
 .new-body {
     padding:20px;
     background-color: #fff;
@@ -77,15 +88,14 @@ img {
         justify-content: flex-end;
         background: #F2F2F2;
         align-items: center;
-        padding:30px 10px;
+        padding:30px 16px;
         
     }
     .title {
         cursor:pointer;
         color:#20a8b4;
         background: #F2F2F2;
-        margin-right: auto;
-        
+        margin-right: 15px auto;   
     }
     
     #code {
